# Apex

./: .gitignore  PUBLISH.md  README.md  SETUP.md  dev.md  index.html  index.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
public/assets/splash/: .gitkeep
scripts/: generate-icon.cjs  release.cjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/components/: AnimatedBackground.tsx  ChangelogModal.tsx  DownloadMirrorModal.tsx  ImportModal.tsx  LanguagePickerModal.tsx  LoadingScreen.tsx  SetupTutorial.tsx  Sidebar.tsx  ThreeDotMenu.tsx  TitleBar.tsx  ToastContainer.tsx  UnderConstruction.tsx  VersionCard.tsx  VersionDetailModal.tsx
src/data/: events.ts  patchNotes.ts  versions.json
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json
src/lib/: downloadLinks.ts  fileDialog.ts  launch.ts  log.ts
src/pages/: Config.tsx  Downloads.tsx  Home.tsx  Library.tsx  Login.tsx  Mods.tsx  Online.tsx  Settings.tsx
src/store/: buildNotesStore.ts  configStore.ts  downloadStore.ts  favouritesStore.ts  installedStore.ts  internalFilesStore.ts  languageStore.ts  linkStore.ts  recentlyPlayedStore.ts  themeStore.ts  toastStore.ts  versionUpdateStore.ts
